--- a/calculatorcss.css
+++ b/calculatorcss.css
@@ -1,5 +1,5 @@
 .container{
-    height: 300vh;
+    height: 400vh;
     display: flex;
     justify-content: center;
     padding-top: 150px;
@@ -7,7 +7,7 @@
 
 }
 .calculator{
-    height: 200vh;
+    height: 300vh;
 }
 table{
     background-color: #ecf0f3;
@@ -22,6 +22,7 @@ th,td{
     inset 6px 6px 13px rgba(0,0,0);
     padding: 15px;
     text-align: center;
+
 }
 input{
     border: none;
@@ -31,9 +32,23 @@ input{
     color:black;
     font-size: 20px;
 }
+::placeholder{
+    font-size: 40px;
+    text-align:right;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
 button{
     border: none;
     width: 100%;
     height: 100%;
+    border-radius: 50%;
+    box-shadow:inset 6px 6px 13px #fff,
+    inset 6px 6px 13px rgba(0,0,0);
+}
+.equal{
+    width:115px;
+    border-radius: 40px;
 }
 
